Working on primitives comparison benchmark